--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ashirbad Electronics Master List</title>
-  <link rel="stylesheet" href="/Users/abhik.boruah/Desktop/PriceList/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <h1>Ashirbad Electronics</h1>
