--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ashirbad Electronics</title>
-  <link rel="stylesheet" href="/Users/abhik.boruah/Desktop/PriceList/style.css">
+  <link rel="stylesheet" href="./style.css">
   <style>
     /* Additional CSS for button styling */
     .btn-primary {
@@ -31,6 +31,6 @@
         
         <div id="detailsDisplay"></div>
     </div>
-    <script src="/Users/abhik.boruah/Desktop/PriceList/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
