--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
     @media only screen and (max-device-width: 767px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 375/812) {
       body {
         overflow-x: hidden;
+        zoom:200%;
       }
       
       .container {
+         position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
         padding: 10px;
       }
     }
