--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     /* CSS for mobile-friendly layout and non-zoomable (Samsung devices) */
-    @media only screen and (max-device-width: 767px) and (-webkit-device-pixel-ratio: 2) {
+    @media only screen and (max-device-width: 767px) {
       body {
         overflow-x: hidden;
         zoom:200%;
@@ -30,7 +30,7 @@
     }
     
     /* CSS for mobile-friendly layout and non-zoomable (iPhones) */
-    @media only screen and (max-device-width: 767px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 375/812) {
+    @media only screen and (max-device-width: 767px)  {
       body {
         overflow-x: hidden;
         zoom:200%;
