--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Ashirbad Electronics</title>
 
   <link rel="stylesheet" href="./style.css">
+  <meta name="viewport" user-scalable=no">
   <style>
     /* Additional CSS for button styling */
     .btn-primary {
