--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       maximum-scale: 1;
       user-scalable: no;
     }
+    input[type="text"], input[type="number"], textarea {
+  touch-action: manipulation;
+}
+
   </style>
 </head>
 <body>
