--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ashirbad Electronics</title>
-
+<link rel="icon" href="./icon.png" type="image/png">
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" user-scalable=no">
   <style>
